high contrast focus issue

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/top-row-functions/top-row-functions.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-input-accessory/top-row-functions/top-row-functions.component.scss
@@ -67,4 +67,14 @@
         font-size: $fontsize_md;
         font-weight: $weight_600;
     }
+   
+    .autofocus{
+        outline: none;
+        @media #{$white-on-black} {
+            border:none;
+		}
+		@media #{$black-on-white} {
+            border:none;
+        }
+    }
 }
